hphp/test/zend/good/Zend/tests/ns_030.php.expectf

Fatal error: Cannot use A\B as Foo because the name is already in use in %s/ns_030.php on line 5
